# NavierStokes-Capoferri_Cecchettini_Untila

./: .gitignore  CMakeLists.txt  README.md
analysis/: plot_coefficients.ipynb
common/: cmake-common.cmake
mesh/: NACA_2408.geo  NACA_2412.geo  domain2D.geo  domain3D.geo  domain3D2.geo  test.py
src/: NavierStokes.cpp  NavierStokes.hpp  NavierStokes3D.cpp  NavierStokes3D.hpp  main.cpp  postprocess.cpp
tests/2D/common/: cmake-common.cmake
tests/2D/test_01/src/: test_01.cpp
tests/2D/test_02/src/: test_02.cpp
tests/2D/test_03/src/: test_03.cpp
tests/2D/test_naca/: run_test.sh
tests/2D/test_naca/src/: test_03.cpp
tests/3D/common/: cmake-common.cmake
tests/3D/test_01/: CMakeLists.txt
tests/3D/test_01/src/: test_01.cpp
tests/3D/test_02/: CMakeLists.txt
tests/3D/test_02/src/: test_02.cpp
tests/3D/test_03/: CMakeLists.txt
tests/3D/test_03/src/: test_03.cpp
